# pyseeta2

./: .gitignore  .gitmodules  .gitmodules.tmp  CMakeLists.txt  Makefile  README.md  setup.py
example/: det.py  example2.py  rec.py
examples/: det.py  rec.py
lib/x64/: libSeetaFaceDetector.so.59964cb  libSeetaFaceLandmarker.so.59964cb  libSeetaFaceRecognizer.so.59964cb  libSeetaFaceTracker.so.59964cb  libSeetaNet.so.59964cb
src/api/: seetaface.cpp
src/include/seeta/: SeetaDetectorExport.h  SeetaFaceTrackerExport.h  SeetaLandmarkerExport.h  SeetaNetExport.h  SeetaRecognizerExport.h
src/pyseeta2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
